--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="pcard"><div class="image"
             ><img id="round" src="https://i.postimg.cc/Hx4nChpH/fbavatar-1630400663387-6838396024049256103.png" alt="prof-pic"></div>
             
-            <h1>Prashant Tanaji Dhuri</h1>
-            <h2>
-                Nallasopara (E), Mumbai
-            </h2>
+            <h1>Prashant Tanaji Dhuri </h1>
+            <h2>  
+                Nallasopara (EAST), Mumbai, India
+            </h2>     
             <p>
                 Student and Web developer
             </p>
