--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             
             <h1>Prashant Tanaji Dhuri </h1>
             <h2>  
-                Nallasopara (EAST), Mumbai, India
+                Nallasopara (E), Mumbai, India
             </h2>     
             <p>
-                Student and Web developer
+                Student at <a class="lnk" href="https://vcet.edu.in/ ">VCET</a> and Web developer
             </p>
 
             <div class="card">
