--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Profile card of Prashant Dhuri">
+    <meta name="keywords" content="html,css,prash">
     <title>Profile-card</title>
     <link rel="stylesheet" href="style.css">
+    <link class="logo" rel="icon" type="image/png" href="1.png"/>
+ 
 </head>
 <body>
     <div class="container">
